--- a/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
@@ -8,6 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ds_photos_photo"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:visibility="visible" />
     <TextView
         android:id="@+id/number_of_more_images"
         android:visibility="gone"
