--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -432,6 +432,7 @@
                     </RelativeLayout>
 
                     <RelativeLayout
+                        android:id="@+id/acces_layout"
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:gravity="center_vertical">
