--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -24,7 +24,7 @@
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -271,6 +271,35 @@
 
                     <com.rey.material.widget.Spinner
                         android:id="@+id/object_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:dropDownWidth="150dp"
+                        android:gravity="center_vertical"
+                        android:popupBackground="@color/white"
+                        app:popupTheme="@style/AppTheme.PopupOverlay"
+                        app:rd_style="@style/Material.Drawable.Ripple.Wave"
+                        app:spn_arrowColor="@android:color/transparent"
+                        app:spn_dividerColor="@android:color/transparent"
+                        app:spn_label="Object"
+                        app:spn_labelEnable="true"
+                        app:spn_labelTextColor="@color/black_text"
+                        app:spn_labelTextSize="16sp"
+                        app:spn_popupItemAnimation="@null" />
+
+                </LinearLayout>
+                <ImageView style="@style/DividerStyle" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:background="@color/white"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        style="@style/CharacteristicsDiveSpotListIcons"
+                        android:src="@drawable/ic_ds_access" />
+
+                    <com.rey.material.widget.Spinner
+                        android:id="@+id/access_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:dropDownWidth="150dp"
