--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -34,7 +34,7 @@
             android:id="@+id/content"
             android:background="?attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text"
             android:layout_marginTop="10dp"
