--- a/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_activity.xml
@@ -21,13 +21,12 @@
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <TextView
+                android:paddingTop="12dp"
                 android:id="@+id/text"
-                android:lines="2"
-                android:ellipsize="end"
                 app:layout_widthPercent="70%"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textColor="@color/black_text"
                 android:textSize="15sp"
@@ -37,7 +36,8 @@
                 android:layout_toRightOf="@+id/text"
                 android:gravity="center"
                 app:layout_widthPercent="13%"
-                android:layout_height="match_parent"
+                android:layout_marginTop="25dp"
+                android:layout_height="wrap_content"
                 android:textSize="12sp"
                 android:textColor="#a3a3a3"
                 android:text="1w"/>
@@ -46,9 +46,8 @@
                 android:layout_toRightOf="@+id/time_ago"
                 android:gravity="center"
                 app:layout_widthPercent="17%"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_ac_tab_profile"/>
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content" />
         </android.support.percent.PercentRelativeLayout>
     </LinearLayout>
     <ImageView
