--- a/trunk/ddscanner/app/src/main/res/layout/item_editor.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_editor.xml
@@ -27,6 +27,9 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black_text"
             android:textSize="16sp"
+            android:lines="1"
+            android:ellipsize="end"
+            android:layout_marginRight="10dp"
             tools:text="Andrei lashkevich" />
 
         <TextView
