--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -185,8 +185,10 @@
 
                     <ImageView
                         android:id="@+id/creator_avatar"
-                        android:layout_width="60dp"
-                        android:layout_height="match_parent"
+                        android:layout_width="@dimen/editor_item_height"
+                        android:layout_height="@dimen/editor_item_height"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
                         android:layout_centerVertical="true" />
 
                     <TextView
