--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -441,12 +441,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/name_title"
                         style="@style/AddDsCharTitleStyle"
                         android:layout_height="wrap_content"
                         android:text="@string/full_name" />
-
+                        <TextView
+                            android:id="@+id/name_count"
+                            android:textColor="#b2b2b2"
+                            android:layout_alignParentRight="true"
+                            android:paddingRight="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </RelativeLayout>
                     <EditText
                         android:id="@+id/fullName"
                         android:layout_marginRight="15dp"
@@ -485,11 +496,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
-                    <TextView
-                        style="@style/AddDsCharTitleStyle"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/about" />
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/about_title"
+                            style="@style/AddDsCharTitleStyle"
+                            android:layout_height="wrap_content"
+                            android:text="@string/about" />
+                        <TextView
+                            android:id="@+id/about_count"
+                            android:textColor="#b2b2b2"
+                            android:layout_alignParentRight="true"
+                            android:paddingRight="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </RelativeLayout>
 
                     <EditText
                         android:id="@+id/aboutEdit"
@@ -532,5 +555,7 @@
             app:rd_rippleType="touch" />
     </LinearLayout>
     </ScrollView>
-    <include layout="@layout/view_need_to_login"/>
+    <include
+
+        layout="@layout/view_need_to_login"/>
 </RelativeLayout>
