--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="70dp"
-    android:layout_height="70dp"
+    android:orientation="vertical"
+    android:layout_width="@dimen/image_in_divespot_small"
+    android:layout_height="@dimen/image_in_divespot_small"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp">
     <ImageView
