--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -16,10 +16,10 @@
         <ImageView
             android:id="@+id/image"
             android:layout_centerInParent="true"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_notif_divespot"
-            android:scaleType="center"/>
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:padding="12dp"
+            android:src="@drawable/ic_notif_divespot" />
             <ImageView
                 android:id="@+id/like_dislike"
                 android:layout_alignParentBottom="true"
