--- a/trunk/ddscanner/app/src/main/res/layout/item_people.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_people.xml
@@ -5,9 +5,9 @@
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="58dp"
-        android:layout_height="58dp"
-        android:scaleType="center"
+        android:layout_width="@dimen/editor_item_height"
+        android:layout_height="@dimen/editor_item_height"
+        android:padding="12dp"
         android:src="@drawable/avatar_checkin" />
 
     <LinearLayout
