--- a/trunk/ddscanner/app/src/main/res/layout/item_photo_in_photos_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_photo_in_photos_activity.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="115dp"
     android:layout_height="115dp"
-    android:layout_marginRight="5dp">
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp">
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
