--- a/trunk/ddscanner/app/src/main/res/values/dimens.xml
+++ b/trunk/ddscanner/app/src/main/res/values/dimens.xml
@@ -24,4 +24,6 @@
 
     <dimen name="editor_item_height">58dp</dimen>
     <dimen name="editor_avatar_radius">20dp</dimen>
+
+    <dimen name="image_in_divespot_small">75dp</dimen>
 </resources>
