--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -333,8 +333,10 @@
                     <android.support.v7.widget.AppCompatEditText
                         android:id="@+id/description"
                         style="@style/AddDsCharTitleStyle"
+                        android:fontFamily="sans-serif"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="18dp"
+                        android:paddingBottom="7dp"
                         android:hint="@string/description" />
                 </LinearLayout>
 
