--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -69,6 +69,7 @@
                     android:gravity="center"
                     android:textColor="#616161"
                     android:textSize="13sp"
+                    android:layout_marginBottom="7dp"
                     android:visibility="gone" />
 
                 <LinearLayout
