--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -57,19 +57,21 @@
             android:layout_height="wrap_content"
             android:text="Vwry very good spot in whateewer very good play market bla bla bla bla "
             android:textColor="@color/black_text"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:paddingBottom="5dp"/>
 
         <android.support.v7.widget.RecyclerView
+            android:visibility="visible"
             android:id="@+id/review_photos_rc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/date"
+            android:text="1231332312"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:textColor="#a3a3a3"
             android:textSize="13sp" />
