--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -38,6 +38,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Andrei Lashkevich"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    android:layout_marginRight="10dp"
                     android:textColor="@color/black_text"
                     android:textSize="18sp" />
 
