--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -33,6 +33,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:gravity="center"
                     android:textColor="@color/black_text"
                     android:layout_marginBottom="7dp"
@@ -462,7 +464,7 @@
                     <EditText
                         android:id="@+id/fullName"
                         android:layout_marginRight="15dp"
-                        android:maxLength="100"
+                        android:maxLength="30"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
