Back button in main activity

--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -156,6 +156,8 @@
 
                     <android.support.v7.widget.AppCompatEditText
                         android:id="@+id/depth"
+                        android:maxLength="5"
+                        android:inputType="number"
                         style="@style/AddDsCharTitleStyle"
                         android:hint="@string/max_depth_meters" />
                 </LinearLayout>
