--- a/trunk/ddscanner/app/src/main/res/layout/activity_no_location_permission.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_no_location_permission.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_locationoff" />
+            android:src="@drawable/ic_nolocation" />
 
         <TextView
             android:id="@+id/text"
@@ -31,7 +31,7 @@
 
         <Button
             android:id="@+id/btn_grant_permission"
-            style="@style/EmptyButtons"
+            style="@style/OrangeButtons"
             android:layout_width="wrap_content"
             android:layout_below="@+id/text"
             android:layout_marginTop="200dp"
