--- a/trunk/ddscanner/app/src/main/res/layout/fragment_serach_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_serach_dive_spot.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text = "search ds"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/spots_list_rc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
