--- a/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
@@ -3,17 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="54dp"
-    android:background="#fbfbfb"
-    android:paddingLeft="20dp">
+    android:background="?attr/selectableItemBackground"
+    android:layout_height="54dp">
     <TextView
+        android:background="#fbfbfb"
         android:id="@+id/diveSpotName"
         tools:text = "Good spot"
+        android:paddingLeft="20dp"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/black_text"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="53dp" />
     <ImageView
+        android:paddingLeft="20dp"
         style="@style/DividerStyleFull" />
 </LinearLayout>
