--- a/trunk/ddscanner/app/src/main/res/layout/item_product_swipable.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_product_swipable.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="82dp"
     android:background="@color/white"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
         <ImageView
             android:transitionName="image"
@@ -37,7 +38,7 @@
                 android:id="@+id/product_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rock back"
+                tools:text = "Rock back"
                 android:textColor="@color/black_text"
                 android:textSize="18sp" />
 
@@ -55,7 +56,7 @@
                 android:layout_below="@+id/stars"
                 android:textSize="15sp"
                 android:textColor="@color/shuffle_item_text"
-                android:text="Wreck"/>
+                tools:text="wreck"/>
         </RelativeLayout>
         <ImageView
             android:layout_toRightOf="@+id/product_logo"
