--- a/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
@@ -2,9 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#FBFBFB"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <include layout="@layout/view_no_location_found"/>
+    <LinearLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <LinearLayout
         android:id="@+id/go_to_my_location"
         android:background="?attr/selectableItemBackground"
@@ -30,4 +36,5 @@
         android:id="@+id/places_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
