--- a/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:id="@+id/no_results"
+    android:visibility="gone"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
