Location search adapter

--- a/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_spots.xml
@@ -24,6 +24,7 @@
             android:textColor="@color/black_text"
             android:text="@string/no_results"/>
         <Button
+            android:id="@+id/add_spot"
             android:layout_marginTop="100dp"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
