--- a/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
@@ -21,13 +21,12 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_my_location"/>
+            android:src="@drawable/ic_mylocation"/>
         <TextView
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/my_current_location"
-            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black_text"/>
     </LinearLayout>
     <ImageView
