--- a/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
@@ -6,7 +6,7 @@
     android:background="?attr/selectableItemBackground"
     android:layout_height="54dp">
     <TextView
-        android:background="#fbfbfb"
+        android:background="@color/white"
         android:id="@+id/diveSpotName"
         tools:text = "Good spot"
         android:paddingLeft="20dp"
